--- a/2021/w11-bechdel-test/tidytuesday-week-11-2021.rmd
+++ b/2021/w11-bechdel-test/tidytuesday-week-11-2021.rmd
@@ -1,1 +1,31 @@
- 
+---
+title: "R Notebook"
+output: html_notebook
+---
+
+```{r}
+library(ggplot2)
+library(tidyverse)
+tuesdata <- tidytuesdayR::tt_load('2021-03-09')
+```
+
+```{r}
+
+bechdel <- tuesdata$raw_bechdel
+movies <- tuesdata$movies
+```
+
+```{r}
+
+head(bechdel)
+head(movies)
+colnames(movies)
+
+```
+How many movies passed the bechdel test
+
+```{r}
+# movies %>% filter(binary == "PASS") # 803 movies
+ggplot(data = movies, aes(x = year, y = imdb_rating)) +
+  geom_point(aes(col=binary))
+```
